<resources>
    <string name="app_name">RestoGo</string>
    <string name="restogo">RestoGo</string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="welcome">Welcome</string>
    <string name="_resto_go">Resto Go</string>
    <string name="dirancang_untuk_memberikan_kemudahan_dan_kenyamanan_dalam_melakukan_pemesanan_makanan_secara_mandiri_oleh_pelanggan_aplikasi_ini_berisi_menu_makanan_pada_restoran_rumah_rasa">Dirancang untuk memberikan kemudahan dan kenyamanan dalam melakukan pemesanan makanan secara mandiri oleh pelanggan. Aplikasi ini berisi menu makanan pada restoran Rumah Rasa.</string>
    <string name="masuk">MASUK</string>
    <string name="daftar">DAFTAR</string>
    <string name="silahkan_isi_data_diri_kamu">Silahkan isi data diri kamu!</string>
    <string name="no_telepon">NO TELEPON</string>
    <string name="_081234567890">081234567890</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="_daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="nama">Nama</string>
    <string name="_nama">NAMA</string>
    <string name="john_doe">John Doe</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="_1">1</string>
    <string name="hai_john_silahkan_pilih_menu">Hai John, Silahkan Pilih Menu</string>
    <string name="cari_makanan">Cari Makanan</string>
    <string name="semua_kategori">Semua Kategori</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="keranjang">Keranjang</string>
    <string name="nasi_tempe_bakar">Nasi Tempe Bakar</string>
    <string name="tambahan">Tambahan</string>
    <string name="telur">Telur</string>
    <string name="rp_28000">Rp.28000</string>
    <string name="_2">2</string>
    <string name="tahutempelovers">TahuTempeLovers</string>
    <string name="punya_kupon">Punya Kupon?</string>
    <string name="apply">Apply</string>
    <string name="total">Total :</string>
    <string name="rp_40_000">Rp 40.000</string>
    <string name="pesan">PESAN</string>
    <string name="resandy_prisadana">Resandy Prisadana</string>
    <string name="no_telepon_pengguna">085239164972</string>
    <string name="pesan_sekarang">PESAN SEKARANG</string>
    <string name="register">REGISTER</string>
    <string name="kategori_menu">Kategori Menu</string>
    <string name="tambah_kategori_menu">Tambah Kategori Menu</string>
    <string name="dessert">Dessert</string>
    <string name="simpan">Simpan</string>
    <string name="update_kategori_menu">Update Kategori Menu</string>
    <string name="daftar_menu">Daftar Menu</string>
    <string name="tambah_menu">Tambah Menu</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="harga">Harga</string>
    <string name="kategori">Kategori</string>
    <string name="gambar">Gambar</string>
    <string name="_10000">10000</string>
    <string name="update_daftar_menu">Update Daftar Menu</string>
    <string name="tambah_daftar_menu">Tambah Daftar Menu</string>
    <string name="profil">Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_085239164972">085239164972</string>
    <string name="pesanan_saya">Pesanan Saya</string>
    <string name="extra_menu">Extra Menu</string>
    <string name="daftar_kategori_menu">Daftar Kategori Menu</string>
    <string name="daftar_extra_menu">Daftar Extra Menu</string>
    <string name="daftar_pelanggan">Daftar Pelanggan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_nama_pengguna">Update Nama Pengguna</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="update_nomor_telepon">Update Nomor Telepon</string>
    <string name="rp_0">Rp. 0</string>
    <string name="cari">Cari</string>
    <string name="nasi_dengan_sambal_dan_tempe_yang_dibakar">Nasi dengan sambal dan tempe yang dibakar</string>
    <string name="detail_menu">Detail Menu</string>
    <string name="detail">Detail</string>
    <string name="nasi_5000">Nasi (5000)</string>
    <string name="telur_4000">Telur (4000)</string>
    <string name="sambal_3000">Sambal (3000)</string>
    <string name="lalapan_3000">Lalapan (3000)</string>
    <string name="tambah_ke_keranjang">Tambah Ke Keranjang</string>
    <string name="tambah_extra_menu">Tambah Extra Menu</string>
    <string name="nama_extra_menu">Nama Extra Menu</string>
    <string name="lalapan">Lalapan</string>
    <string name="update_extra_menu">Update Extra Menu</string>
    <string name="option">Option</string>
    <string name="keluar">Keluar</string>
    <string name="daftar_kupon">Daftar Kupon</string>
    <string name="tambah_kupon">Tambah Kupon</string>
    <string name="kode_kupon">Kode Kupon</string>
    <string name="diskon">Diskon</string>
    <string name="berlaku">Berlaku</string>
    <string name="juni_juli_2024">Juni - Juli 2024</string>
    <string name="tambah_daftar_kupon">Tambah Daftar Kupon</string>
    <string name="diskonberlimpah">DiskonBerlimpah</string>
    <string name="_5">5%</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="diskon_persen">Diskon (%)</string>
    <string name="_10">10</string>
    <string name="start_date">Start Date</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="_1_januari_2024">1 Januari 2024</string>
    <string name="_31_januari_2024">31 Januari 2024</string>
    <string name="update_daftar_kupon">Update Daftar Kupon</string>
    <string name="berlangsung">Berlangsung</string>
    <string name="riwayat">Riwayat</string>
    <string name="rp10_000_x1">Rp10.000 | x1</string>
    <string name="_1_item">1 Item</string>
    <string name="tanfa_min">-</string>
    <string name="tanda_min">-</string>
    <string name="sedang_dikerjakan_harap_menunggu">Sedang Dikerjakan, Harap Menunggu!</string>
    <string name="telur_rp_5000">Telur - Rp.5000</string>
    <string name="total_rp_45_000">Total Rp.45.000</string>
    <string name="tidak_ada_pesanan_berlangsung">Tidak Ada Pesanan Berlangsung</string>
    <string name="tidak_ada_riwayat_pesanan">Tidak Ada Riwayat Pesanan</string>
    <string name="pemesanan_berhasil">Pemesanan Berhasil</string>
    <string name="kembali">Kembali</string>
    <string name="daftar_pengguna">Daftar Pengguna</string>
    <string name="tambah_pengguna">Tambah Pengguna</string>
    <string name="status">Status</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
</resources>