<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".UpdateCouponActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:src="@drawable/ellipse_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_update_coupon_activity_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_coupon_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/update_daftar_kupon"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_constraint_update_coupon_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_redius_top"
        android:minHeight="550dp"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_coupon_activity"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_constraintTop_toTopOf="@+id/layout_constraint_update_coupon_activity"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_update_coupon_activity_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/kode_kupon"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_update_coupon_activity_coupon_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_input"
                    android:hint="@string/diskonberlimpah"
                    android:inputType="text"
                    android:padding="16dp" />

                <TextView
                    android:id="@+id/tv_update_coupon_activity_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/diskon_persen"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_update_coupon_activity_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_input"
                    android:hint="@string/_10"
                    android:inputType="number"
                    android:padding="16dp" />

                <TextView
                    android:id="@+id/tv_update_coupon_activity_date_started"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/tanggal_mulai"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_update_coupon_activity_date_started"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_input"
                    android:hint="@string/_1_januari_2024"
                    android:inputType="date"
                    android:padding="16dp" />

                <TextView
                    android:id="@+id/tv_update_coupon_activity_date_ended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/tanggal_selesai"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_update_coupon_activity_date_ended"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_input"
                    android:hint="@string/_31_januari_2024"
                    android:inputType="date"
                    android:padding="16dp" />

                <Button
                    android:id="@+id/btn_update_coupon_activity_simpan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/background_primary"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="8dp"
                    android:text="@string/simpan"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/edt_update_coupon_activity_date_ended"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>